hooked up swagger.API and tested all end points on both dbs
