# controllers/vehicles.js
@@ -2,28 +2,30 @@ const mongodb = require("../data/database");
 const ObjectId = require("mongodb").ObjectId;
 
 const getAll = async (req, res) => {
+  //#swagger.tags=['Vehicles']
   try {
-    const contacts = await mongodb
+    const vehicles = await mongodb
       .getDatabase()
       .db()
-      .collection("vehicle")
+      .collection("vehicles")
       .find()
       .toArray();
 
-    res.status(200).json(vehicle);
+    res.status(200).json(vehicles);
   } catch (err) {
     res.status(500).json({ message: err.message });
   }
 };
 
 const getSingle = async (req, res) => {
+  //#swagger.tags=['Vehicles']
   if (!ObjectId.isValid(req.params.id)) {
-    res.status(400).json("Must use a valid contact id to find contact.");
+    res.status(400).json("Must use a valid vehicle id to find vehicle.");
   }
   try {
-    const contactId = new ObjectId(req.params.id);
+    const vehicleId = new ObjectId(req.params.id);
 
-    const contact = await mongodb
+    const vehicle = await mongodb
       .getDatabase()
       .db()
       .collection("vehicles")
@@ -36,21 +38,21 @@ const getSingle = async (req, res) => {
 };
 
 const createVehicle = async (req, res) => {
-  //#swagger.tags=['Vehicle']
+  //#swagger.tags=['Vehicles']
   const vehicle = {
     make: req.body.make,
     model: req.body.model,
     color: req.body.color,
     fuel: req.body.fuel,
     price: req.body.price,
-    miles: req.body.miles,
+    milesOrHours: req.body.milesOrHours,
     type: req.body.type,
   };
   const response = await mongodb
     .getDatabase()
     .db()
     .collection("vehicles")
-    .insertOne(contact);
+    .insertOne(vehicle);
   if (response.acknowledged) {
     res.status(204).send();
   } else {
@@ -74,7 +76,7 @@ const updateVehicle = async (req, res) => {
     color: req.body.color,
     fuel: req.body.fuel,
     price: req.body.price,
-    drive: req.body.drive,
+    milesOrHours: req.body.milesOrHours,
     type: req.body.type,
   };
   const response = await mongodb
@@ -96,7 +98,7 @@ const updateVehicle = async (req, res) => {
 const deleteVehicle = async (req, res) => {
   //#swagger.tags=['Vehicles']
   if (!ObjectId.isValid(req.params.id)) {
-    res.status(400).json("Must use a valid contact id to find vehicle.");
+    res.status(400).json("Must use a valid vehicle id to find vehicle.");
   }
   const vehicleId = new ObjectId(req.params.id);
   const response = await mongodb
